# elytra-ms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: mirror.yml  python-publish.yml
elytra/: __init__.py  const.py  core.py  protocols.py  retry_transport.py
elytra/bedrock_realms/: __init__.py  models.py
elytra/scripts/: auth_device_code.py  authenticate.py
elytra/xbox/: __init__.py  core.py  rta.py
elytra/xbox/club/: __init__.py  models.py
elytra/xbox/message/: __init__.py  models.py
elytra/xbox/peoplehub/: __init__.py  models.py
elytra/xbox/profile/: __init__.py  models.py
elytra/xbox/social/: __init__.py
